CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(BasicGL)

SET(BASICGL_VERSION_MAJOR 0)
SET(BASICGL_VERSION_MINOR 0)
SET(BASICGL_VERSION_PATCH 2)

#####

SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -Wall")

# Find openGL
FIND_PACKAGE(OpenGL REQUIRED)

# Find FreeGLUT
FIND_PACKAGE(GLUT REQUIRED)

INCLUDE_DIRECTORIES(
  ${OPENGL_INCLUDE_DIRS}
  ${GLUT_INCLUDE_DIRS}
  )

LINK_DIRECTORIES(
  ${OPENGL_LIBRARY_DIRS}
  ${GLUT_LIBRARY_DIRS}
  )

ADD_EXECUTABLE ( BasicGL
  src/main.cpp
)

TARGET_LINK_LIBRARIES( BasicGL
  ${OPENGL_LIBRARIES}
  ${GLUT_LIBRARIES}
  )